remove a possibility to set or update current balance on account in graphql